@@ -1,11 +1,20 @@
 package com.ll.level3.p12946;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class Main {
-}
+    public static void main(String[] args) {
+        System.out.println(
+                Arrays.deepToString(new Solution().solution(4))
+        );
+    }
+
+    }
+
 class Solution {
+    public static boolean isDebug = false;
     public int[][] solution(int n) {
         return new Hanoi(1, 3, n).toArray();
     }
@@ -14,6 +23,7 @@ class Solution {
 class Hanoi {
 
     private final List<int[]> paths = new ArrayList<>();
+    private int calculateCallCount = 0;
 
     public Hanoi(int from, int to, int n) {
 
@@ -22,14 +32,17 @@ class Hanoi {
 
     public void calculate(int from, int to, int n, int depth) {
 
-        String debugLineHead = "\t".repeat(depth - 1) + "(%d) => (%d), %d개 옮기기".formatted(from, to, n);
+        calculateCallCount++;
+        String debugLineHead = "\t".repeat(depth - 1) + String.format("%03d : (%d) => (%d), %d개 옮기기", calculateCallCount, from, to, n);
 
-        System.out.println(debugLineHead + " - 시작");
+        if(Solution.isDebug){System.out.println(debugLineHead + " - 시작");}
+
 
 
         if (n == 1) {
             addPath(from, to);
-            System.out.println(debugLineHead + " - 끝");
+            if(Solution.isDebug){ System.out.println(debugLineHead + " - 끝");}
+
             return;
         }
         int empty = 6 - from -to;
@@ -37,7 +50,10 @@ class Hanoi {
         calculate(from,to,1, depth + 1);
         calculate(empty,to,n-1, depth + 1);
 
-        System.out.println(debugLineHead + " - 끝");
+        if (Solution.isDebug) {
+            System.out.println(debugLineHead + " - 끝");
+        }
+
 
     }
     private void addPath(int from, int to){
